--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body{
     width: 100%;
     height: 400px;
    /* border: 1px solid grey;*/
-    background-image: url(img/por\ dentro.jpeg);
+    background-image: url(img/civic.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
