--- a/style.css
+++ b/style.css
@@ -208,8 +208,22 @@ aside{
 #tags-popular a:hover{
     background-color: rgb(104, 104, 104);
 }
+#Sonata{
+    padding: 5px;
+}
 
-
+#Sonata ul li a {
+    display: flex;
+justify-content: space-between;
+text-decoration: none;
+color: black;
+padding: 0px 0;
+}
+#Sonata{
+    width: 270px;
+    height: 300px;
+    margin: 5px auto;
+}
 /*FOOTER*/
 footer{
     display: flex;
